added gru, all for flare

--- a/pytorch-gru.ipynb
+++ b/pytorch-gru.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LSTMTagger(nn.Module):\n",
+    "class GRUTagger(nn.Module):\n",
     "\n",
     "    def __init__(self, embed_dict, hidden_dim, num_classes):\n",
-    "        super(LSTMTagger, self).__init__()\n",
+    "        super(GRUTagger, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.embed_dict = embed_dict\n",
     "        vocab_size, embedding_dim = embed_dict.embeddings.size()\n",
@@ -57,23 +57,23 @@
     "        # freeze embeddings\n",
     "        self.word_embeddings.weight.data.copy_(embed_dict.embeddings)\n",
     "        self.word_embeddings.weight.requires_grad = False\n",
-    "        # single layer bidirectional lstm\n",
+    "        # single layer bidirectional GRU\n",
     "        self.num_dirs = 2\n",
-    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, bidirectional=True)\n",
+    "        self.gru = nn.GRU(embedding_dim, hidden_dim, bidirectional=True)\n",
     "        # The linear layer that maps from hidden state space to tag space\n",
     "        self.hidden2tag = nn.Linear(self.num_dirs * hidden_dim, num_classes)\n",
     "        self.dropout = nn.Dropout(0.5)\n",
-    "        self.hidden = self.init_hidden()\n",
+    "        self.hidden = self.init_hidden\n",
     "\n",
+    "    @property\n",
     "    def init_hidden(self):\n",
-    "        return (autograd.Variable(torch.zeros(self.num_dirs, 1, self.hidden_dim)),\n",
-    "                autograd.Variable(torch.zeros(self.num_dirs, 1, self.hidden_dim)))\n",
+    "        return autograd.Variable(torch.zeros(self.num_dirs, 1, self.hidden_dim))\n",
     "\n",
     "    def forward(self, sentence):\n",
     "        embeds = self.word_embeddings(sentence)\n",
     "        flatten_input = embeds.view(len(sentence), 1, -1)\n",
-    "        lstm_out, self.hidden = self.lstm(flatten_input, self.hidden)\n",
-    "        hidden_state = lstm_out[-1].view(1, self.num_dirs * self.hidden_dim)\n",
+    "        gru_out, self.hidden = self.gru(flatten_input, self.hidden)\n",
+    "        hidden_state = gru_out[-1].view(1, self.num_dirs * self.hidden_dim)\n",
     "        hidden_state = self.dropout(hidden_state)\n",
     "        return self.hidden2tag(hidden_state)"
    ]
@@ -117,7 +117,7 @@
     "    model.eval()\n",
     "    num_correct, num_total = 0, 0\n",
     "    for sentence, label in data:\n",
-    "        model.hidden = model.init_hidden()\n",
+    "        model.hidden = model.init_hidden\n",
     "        sentence = embed_dict.convert(sentence)\n",
     "        if sentence is None:\n",
     "            continue\n",
@@ -140,9 +140,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <generator object load_data at 0x10c2c9d58>\n",
+      "Exception ignored in: <generator object load_data at 0x104337d58>\n",
       "RuntimeError: generator ignored GeneratorExit\n",
-      "Exception ignored in: <generator object load_data at 0x10c2c9d58>\n",
+      "Exception ignored in: <generator object load_data at 0x104337d58>\n",
       "RuntimeError: generator ignored GeneratorExit\n"
      ]
     }
@@ -154,7 +154,7 @@
     "embed_dict = EmbeddingDict(\"data/small-glove.50d.txt\")\n",
     "train_data = list(itertools.islice(load_data(\"data/sentiment-train10k.txt\"), n))\n",
     "test_data = list(itertools.islice(load_data(\"data/sentiment-test10k.txt\"), n))\n",
-    "model = LSTMTagger(embed_dict, lstm_size, 2)\n",
+    "model = GRUTagger(embed_dict, lstm_size, 2)\n",
     "loss_function = nn.CrossEntropyLoss()\n",
     "learned_params = [param for pname, param in model.named_parameters() if 'word_embeddings' not in pname]\n",
     "optimizer = optim.Adadelta(learned_params)"
@@ -169,36 +169,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy:  0.568784392196098\n",
-      "Test Accuracy:  0.5755\n",
-      "End of epoch 0: 1374.0946044921875 [29141 ms]\n",
-      "Train Accuracy:  0.6908454227113556\n",
-      "Test Accuracy:  0.6795\n",
-      "End of epoch 1: 1294.615234375 [32496 ms]\n",
-      "Train Accuracy:  0.7093546773386693\n",
-      "Test Accuracy:  0.7025\n",
-      "End of epoch 2: 1192.751708984375 [30718 ms]\n",
-      "Train Accuracy:  0.7273636818409205\n",
-      "Test Accuracy:  0.7175\n",
-      "End of epoch 3: 1113.94287109375 [29582 ms]\n",
-      "Train Accuracy:  0.7413706853426714\n",
-      "Test Accuracy:  0.7305\n",
-      "End of epoch 4: 1081.6787109375 [28379 ms]\n",
-      "Train Accuracy:  0.7538769384692346\n",
-      "Test Accuracy:  0.7355\n",
-      "End of epoch 5: 1040.8531494140625 [29469 ms]\n",
-      "Train Accuracy:  0.7703851925962981\n",
-      "Test Accuracy:  0.7495\n",
-      "End of epoch 6: 1000.3820190429688 [28806 ms]\n",
-      "Train Accuracy:  0.7733866933466733\n",
-      "Test Accuracy:  0.7545\n",
-      "End of epoch 7: 969.9144287109375 [30365 ms]\n",
-      "Train Accuracy:  0.775887943971986\n",
-      "Test Accuracy:  0.754\n",
-      "End of epoch 8: 943.1220703125 [30991 ms]\n",
-      "Train Accuracy:  0.7978989494747374\n",
-      "Test Accuracy:  0.7685\n",
-      "End of epoch 9: 918.318359375 [30608 ms]\n"
+      "Train Accuracy:  0.599799899949975\n",
+      "Test Accuracy:  0.5925\n",
+      "End of epoch 0: 1381.95458984375 [31172 ms]\n",
+      "Train Accuracy:  0.7013506753376688\n",
+      "Test Accuracy:  0.688\n",
+      "End of epoch 1: 1273.088623046875 [28313 ms]\n",
+      "Train Accuracy:  0.7248624312156078\n",
+      "Test Accuracy:  0.7125\n",
+      "End of epoch 2: 1157.6312255859375 [30121 ms]\n",
+      "Train Accuracy:  0.7373686843421711\n",
+      "Test Accuracy:  0.723\n",
+      "End of epoch 3: 1090.34033203125 [29576 ms]\n",
+      "Train Accuracy:  0.7528764382191095\n",
+      "Test Accuracy:  0.7345\n",
+      "End of epoch 4: 1042.017333984375 [31145 ms]\n",
+      "Train Accuracy:  0.7673836918459229\n",
+      "Test Accuracy:  0.746\n",
+      "End of epoch 5: 1007.1766967773438 [33939 ms]\n",
+      "Train Accuracy:  0.7748874437218609\n",
+      "Test Accuracy:  0.7515\n",
+      "End of epoch 6: 976.752197265625 [31245 ms]\n",
+      "Train Accuracy:  0.7863931965982992\n",
+      "Test Accuracy:  0.761\n",
+      "End of epoch 7: 943.0791625976562 [29606 ms]\n",
+      "Train Accuracy:  0.7853926963481741\n",
+      "Test Accuracy:  0.764\n",
+      "End of epoch 8: 926.1249389648438 [30087 ms]\n",
+      "Train Accuracy:  0.799399699849925\n",
+      "Test Accuracy:  0.775\n",
+      "End of epoch 9: 889.488525390625 [29442 ms]\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "    for batch in chunks(train_data, batch_size):\n",
     "        model.zero_grad()\n",
     "        for sentence, label in batch:\n",
-    "            model.hidden = model.init_hidden()\n",
+    "            model.hidden = model.init_hidden\n",
     "            sentence = embed_dict.convert(sentence)\n",
     "            if sentence is None:\n",
     "                continue\n",
